[gd_scene load_steps=17 format=3 uid="uid://d3t0hwjvm6cug"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_gffl3"]
[ext_resource type="PackedScene" uid="uid://83dcr772fbpv" path="res://scenes/parallax_background.tscn" id="1_tlg85"]
[ext_resource type="Texture2D" uid="uid://bh4hvs0ywy83j" path="res://assets/Art/UI/buttons/kamiyon copyright.png" id="2_d3gy8"]
[ext_resource type="Texture2D" uid="uid://mgy5yut04ics" path="res://assets/Art/UI/buttons/btn_newgame_normal.png" id="2_eoqfr"]
[ext_resource type="Texture2D" uid="uid://b8sbo6nharnr2" path="res://assets/Art/UI/buttons/btn_newgame_pressed.png" id="3_n3v62"]
[ext_resource type="Texture2D" uid="uid://c1hjcyyokas0o" path="res://assets/Art/UI/buttons/btn_newgame_hover.png" id="4_b1iod"]
[ext_resource type="AudioStream" uid="uid://dcv4tmnhyksw4" path="res://assets/Sounds/music_title_screen.mp3" id="10_hj66t"]
[ext_resource type="Texture2D" uid="uid://w8mvveisoakc" path="res://assets/Art/UI/buttons/btn_exit_normal.png" id="11_2ed03"]
[ext_resource type="Texture2D" uid="uid://b4twhsdsb8stf" path="res://assets/Art/UI/buttons/btn_exit_pressed.png" id="12_8e1cs"]
[ext_resource type="Texture2D" uid="uid://7srdd4qphg6n" path="res://assets/Art/UI/buttons/btn_exit_hover.png" id="13_uiqc0"]
[ext_resource type="Texture2D" uid="uid://berg8chwdt543" path="res://assets/Art/UI/title_screen_pop_quiz.png" id="13_vdtur"]
[ext_resource type="Texture2D" uid="uid://dyb47ixt6v8d7" path="res://assets/Art/UI/aws2.png" id="17_pveig"]
[ext_resource type="PackedScene" uid="uid://c8d227aqdys4c" path="res://scenes/scene_transition.tscn" id="18_3o5sx"]

[sub_resource type="Animation" id="Animation_e1n4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aws2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Aws2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.356667, 0.356667)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleScreenPopQuiz:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(294, 192)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TitleScreenPopQuiz:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TitleScreenPopQuiz:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.686681, 0.686681)]
}

[sub_resource type="Animation" id="Animation_6863a"]
resource_name = "aws_logo_rotation"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Aws2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.23333, 2.6, 3.53333, 4.26667, 5),
"transitions": PackedFloat32Array(0.406126, 3.03143, 3.03143, 2.46229, 0.659754, 0.659754),
"update": 0,
"values": [-6.28319, 0.698132, -0.698132, 0.349066, 0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Aws2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.86667, 3.4, 5),
"transitions": PackedFloat32Array(2.2974, 0.378929, 2.07053, 0.517632),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.333333, 0.333333), Vector2(0.356667, 0.356667), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleScreenPopQuiz:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(294, 192)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TitleScreenPopQuiz:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TitleScreenPopQuiz:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.03333, 2.56667, 3.9, 5),
"transitions": PackedFloat32Array(0.5, 0.517632, 0.466517, 0.466516, 0.466516),
"update": 0,
"values": [Vector2(0.686681, 0.686681), Vector2(0.607, 0.607), Vector2(0.686681, 0.686681), Vector2(0.607, 0.607), Vector2(0.686681, 0.686681)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfo7x"]
_data = {
"RESET": SubResource("Animation_e1n4b"),
"aws_logo_rotation": SubResource("Animation_6863a")
}

[node name="title_screen" type="Control" node_paths=PackedStringArray("scene_transiton_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gffl3")
scene_transiton_manager = NodePath("Scene_Transition")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_tlg85")]

[node name="KamiyonCopyright" type="Sprite2D" parent="."]
scale = Vector2(0.749946, 0.749538)
texture = ExtResource("2_d3gy8")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50

[node name="title_screen_btns" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="btn_new_game" type="TextureButton" parent="MarginContainer/title_screen_btns"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_eoqfr")
texture_pressed = ExtResource("3_n3v62")
texture_hover = ExtResource("4_b1iod")
texture_disabled = ExtResource("3_n3v62")

[node name="btn_exit" type="TextureButton" parent="MarginContainer/title_screen_btns"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("11_2ed03")
texture_pressed = ExtResource("12_8e1cs")
texture_hover = ExtResource("13_uiqc0")

[node name="music_title_screen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_hj66t")
autoplay = true

[node name="Aws2" type="Sprite2D" parent="."]
position = Vector2(712, 270)
scale = Vector2(0.356667, 0.356667)
texture = ExtResource("17_pveig")

[node name="anim_aws_logo" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rfo7x")
}
autoplay = "aws_logo_rotation"

[node name="Scene_Transition" parent="." instance=ExtResource("18_3o5sx")]
layout_mode = 1
offset_left = 1270.0
offset_right = 1270.0

[node name="TitleScreenPopQuiz" type="Sprite2D" parent="."]
position = Vector2(294, 192)
scale = Vector2(0.686681, 0.686681)
texture = ExtResource("13_vdtur")

[connection signal="pressed" from="MarginContainer/title_screen_btns/btn_new_game" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/title_screen_btns/btn_exit" to="." method="_on_btn_exit_pressed"]
